# esp32_bsdiffOTA

./: CMakeLists.txt  esp32_bsdiff  esp32_bspatch  partitions.csv  sdkconfig.old
components/bsdiff/: CMakeLists.txt
components/bsdiff/inc/: Compiler.h  bspatch.h  user_interface.h
components/bsdiff/src/: 7zFile.c  LzFind.c  LzmaDec.c  LzmaEnc.c  bspatch.c  lzma_decompress.c  user_interface.c
main/: CMakeLists.txt  main.c
